--- a/circle.yml
+++ b/circle.yml
@@ -2,9 +2,7 @@ dependencies:
   pre:
     - curl -sf -L https://static.rust-lang.org/rustup.sh | sh /dev/stdin --channel=nightly --yes
     - python setup.py install
-    - cd example
-    - python setup.py install
-    - cd ..
+    - cd example;python setup.py install
     - pip install nose
 test:
   override:
