--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rust:
 python:
   - "3.5"
 install:
-  - "apt-get install python3"
+  - "sudo apt-get install python3"
   - "python setup.py install"
   - "cd example; python setup.py install; cd .."
 script:
