--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rust:
   - nightly
 python:
   - "3.5"
-install:
+before_script:
   - "curl -sL https://static.rust-lang.org/rustup.sh -o ~/rust-installer/rustup.sh"
   - "sh ~/rust-installer/rustup.sh --prefix=~/rust --spec=nightly -y --disable-sudo 2> /dev/null"
   - "python setup.py install"
