--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rust:
 python:
   - "3.5"
 before_script:
+  - "mkdir ~/rust-installer ~/rust"
   - "curl -sL https://static.rust-lang.org/rustup.sh -o ~/rust-installer/rustup.sh"
   - "sh ~/rust-installer/rustup.sh --prefix=~/rust --spec=nightly -y --disable-sudo 2> /dev/null"
   - "python setup.py install"
